# some-ipynb-proj

./: .gitignore  README.md  pyproject.toml  sample.ipynb
