[tool.poetry]
name = "some-ipynb-proj"
version = "0.1.0"
description = ""
authors = ["ulgoon <ulgoon89@gmail.com>"]
readme = "README.md"
packages = [{include = "some_ipynb_proj"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
